2013-10-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	include/functions_alerts.php
	operation/agentes/status_monitor.php
	operation/agentes/status_events.php
	mobile/operation/modules.php: Fixed several calls
	to acl tags with same fixes of Juanma in previous commits

2013-10-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Change the way of 
	calculate next contact in main agent view to real
	next contact using only agent interval.

2013-10-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_tags.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/status_events.php: uploaded the fixes of Juanma.
	Thanks Juanma ;) 

2013-10-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	godmode/groups/configure_group.php
	godmode/alerts/alert_templates.php
	godmode/modules/manage_network_components.php
	godmode/tag/tag.php
	godmode/tag/edit_tag.php
	godmode/category/edit_category.php: Fixed many aesthetic
	issues

2013-10-09  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Point to the OUM server version 5.

2013-10-09  Sergio Martin <sergio.martin@artica.es>

	* images/custom_logo/artica_logo.png: Resize artica logo
	for header

2013-10-09  Sergio Martin <sergio.martin@artica.es>

	* images/custom_logo/none.png: Added none image to use
	Pandora FMS without header logo

2013-10-09  Sergio Martin <sergio.martin@artica.es>

	* images/custom_logo/pandora_logo_head.png
	images/custom_logo/artica_logo.png: Reupload
	the open header image and artica logo as alternative
	deleted by me due a confussion with pdf header images

2013-10-09  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js
	images/tip.png: Replace tip image by new star, increse
	a little the license info dialog

	* operation/agentes/estado_generalagente.php: Added real 